# ESP32-TDD-KATA-TEMP

./: CMakeLists.txt  README.md  dockerDev.sh  makeComponent.sh
.github/workflows/: ci.yml
components/AppController/: CMakeLists.txt  appController.c
components/AppController/include/: appController.h
components/LedController/: CMakeLists.txt  ledController.c
components/LedController/include/: ledController.h
components/NetworkController/: CMakeLists.txt  networkController.c
components/NetworkController/include/: networkController.h
components/board/: CMakeLists.txt  board.c
components/board/include/: board.h
components/led_controller/: CMakeLists.txt  led_controller.c
components/led_controller/include/: led_controller.h
main/: CMakeLists.txt  main.c
main/include/: common.h
step-0-setup/: README.md
step-1/: step one.md
step-1-getting-started/: README.md  step one.md  step-by-step.md
step-1-getting-started/starter/: .gitignore
step-1-getting-started/starter/components/app_logic/: app_logic.c
step-1-getting-started/starter/components/app_logic/include/: app_logic.h
step-1-getting-started/starter/main/: CMakeLists.txt  main.c
step-1-getting-started/starter/test/: main_tests.cpp
step-2/: step two.md
step-2-led-controller/: step two.md
step-2-led-controller/starter/: CMakeLists.txt  CmakeConfig.h.in
step-2-led-controller/starter/main/include/: main.h
step-2-led-controller/starter/test/mocks/: esp_log.h
step-2/starter/: .gitignore
step-2/starter/components/app_logic/: CMakeLists.txt
step-3-connect-to-wifi/: step three.md
step-3-connect-to-wifi/starter/components/app_logic/: CMakeLists.txt  app_logic.c
step-3-connect-to-wifi/starter/components/led_controller/: CMakeLists.txt  led_controller.c
step-3-connect-to-wifi/starter/components/led_controller/include/: led_controller.h
step-3-connect-to-wifi/starter/main/: CMakeLists.txt
step-3-connect-to-wifi/starter/test/: app_logic_tests.cpp  led_controller_tests.cpp
step-4-get-data-from-internet/: step four.md
step-4-get-data-from-internet/solution/: CMakeLists.txt
step-4-get-data-from-internet/solution/components/app_logic/: CMakeLists.txt  app_logic.c
step-4-get-data-from-internet/solution/components/led_controller/: led_controller.c
step-4-get-data-from-internet/solution/components/led_controller/include/: led_controller.h
step-4-get-data-from-internet/solution/components/network_controller/: network_controller.c
step-4-get-data-from-internet/solution/components/network_controller/include/: network_controller.h
step-4-get-data-from-internet/solution/main/: main.c
step-4-get-data-from-internet/solution/test/: CMakeLists.txt  app_logic_tests.cpp  network_controller_tests.cpp
step-4-get-data-from-internet/solution/test/mocks/: esp_err.h  esp_http_client.h  esp_log.h  esp_netif.h
step-4-get-data-from-internet/solution/test/mocks/driver/: gpio.h
step-4-get-data-from-internet/starter/components/network_controller/: CMakeLists.txt  network_controller.c
step-4-get-data-from-internet/starter/components/network_controller/include/: network_controller.h
step-4-get-data-from-internet/starter/test/: app_logic_tests.cpp  led_controller_tests.cpp  network_controller_tests.cpp
step-4-get-data-from-internet/starter/test/mocks/: esp_event.h
test/: led_controller_tests.cpp
test/hardware_libraries/: board_tests.cpp
test/mocks/driver/: gpio.h
workspace/getting-started-esp32/: vmDockerDev.sh
workspace/getting-started-esp32/components/app_logic/: app_logic.c
workspace/getting-started-esp32/components/led_controller/: led_controller.c
workspace/getting-started-esp32/components/led_controller/include/: led_controller.h
workspace/getting-started-esp32/components/network_controller/: CMakeLists.txt  network_controller.c
workspace/getting-started-esp32/main/: CMakeLists.txt
workspace/getting-started-esp32/test/: app_logic_tests.cpp  led_controller_tests.cpp  network_controller_tests.cpp
workspace/getting-started-esp32/test/mocks/: esp_http_client.h  esp_netif.h  nvs_flash.h  protocol_examples_common.h
workspace/getting-started-esp32/test/mocks/driver/: gpio.h
